# vmkit-test-minimal

./: .dockerignore  .env.staging.example  Dockerfile  Dockerfile.prod  README.md  pyproject.toml  server.py
.github/workflows/: deploy-staging.yml  vmkit-deploy.yml
.kamal/: secrets.staging.tpl
config/: deploy.staging.yml
